added - funzionalita' di selezione data specifica

--- a/index.html
+++ b/index.html
@@ -22,10 +22,11 @@
             <button data-period="week" class="period-btn bg-green-600 text-white px-4 py-2 rounded">Settimana</button>
             <button data-period="month" class="period-btn bg-gray-700 text-white px-4 py-2 rounded">Mese</button>
             <button data-period="year" class="period-btn bg-gray-700 text-white px-4 py-2 rounded">Anno</button>
+            <input type="date" id="customDate" class="bg-gray-700 text-white px-4 py-2 rounded" />
         </div>
 
         <div class="grid grid-cols-3 gap-6">
-            <!-- Timer Section (Unchanged) -->
+            <!-- Timer Section -->
             <div class="bg-gray-800 p-4 rounded-lg">
                 <h2 class="text-xl mb-4">Time Tracker</h2>
                 <div id="timer" class="text-4xl text-center mb-4">00:00:00</div>
@@ -35,7 +36,7 @@
                 </div>
             </div>
 
-            <!-- Time Charts (Unchanged) -->
+            <!-- Time Charts -->
             <div class="col-span-2 bg-gray-800 p-4 rounded-lg">
                 <h2 class="text-xl mb-4">Distribuzione Tempo</h2>
                 <div id="timeDistributionChart"></div>
