--- a/index.html
+++ b/index.html
@@ -12,18 +12,18 @@
 </head>
 <body class="bg-gray-900 text-white">
     <div class="container mx-auto p-6">
+        <!-- Header and Date Selection -->
+        <div class="flex justify-between items-center mb-6">
+            <h1 class="text-2xl font-bold">Clockify Dashboard</h1>
+            
+            <div class="date-selector bg-gray-800 p-3 rounded-lg flex items-center">
+                <span id="selectedDateDisplay" class="mr-4 text-lg">Data selezionata: Oggi</span>
+                <input type="date" id="customDate" class="bg-gray-700 text-white px-4 py-2 rounded cursor-pointer" />
+            </div>
+        </div>
+
         <!-- Error Container -->
         <div id="errorContainer" class="bg-red-600 text-white p-4 mb-4 rounded hidden"></div>
-
-        <!-- Period Selection -->
-        <div class="flex justify-center space-x-4 mb-6">
-            <button data-period="today" class="period-btn bg-gray-700 text-white px-4 py-2 rounded">Oggi</button>
-            <button data-period="3days" class="period-btn bg-gray-700 text-white px-4 py-2 rounded">3 Giorni</button>
-            <button data-period="week" class="period-btn bg-green-600 text-white px-4 py-2 rounded">Settimana</button>
-            <button data-period="month" class="period-btn bg-gray-700 text-white px-4 py-2 rounded">Mese</button>
-            <button data-period="year" class="period-btn bg-gray-700 text-white px-4 py-2 rounded">Anno</button>
-            <input type="date" id="customDate" class="bg-gray-700 text-white px-4 py-2 rounded" />
-        </div>
 
         <div class="grid grid-cols-3 gap-6">
             <!-- Timer Section -->
@@ -32,36 +32,57 @@
                 <div id="timer" class="text-4xl text-center mb-4">00:00:00</div>
                 <div class="flex justify-center space-x-4">
                     <button id="startTimer" class="bg-green-600 px-4 py-2 rounded">Start</button>
-                    <button id="stopTimer" class="bg-red-600 px-4 py-2 rounded">Stop</button>
+                    <button id="stopTimer" class="bg-red-600 px-4 py-2 rounded" disabled>Stop</button>
                 </div>
             </div>
 
-            <!-- Time Charts -->
-            <div class="col-span-2 bg-gray-800 p-4 rounded-lg">
-                <h2 class="text-xl mb-4">Distribuzione Tempo</h2>
-                <div id="timeDistributionChart"></div>
-            </div>
-
             <!-- Project Breakdown -->
-            <div class="bg-gray-800 p-4 rounded-lg">
+            <div class="col-span-2 bg-gray-800 p-4 rounded-lg">
                 <h2 class="text-xl mb-4">Tempo per Progetto</h2>
                 <div id="projectTimeChart"></div>
             </div>
+            
+            <!-- Daily Chart (line chart) -->
+            <div class="col-span-3 bg-gray-800 p-4 rounded-lg">
+                <div id="dailyChart"></div>
+            </div>
+
+            <!-- 3 Days Chart (bar chart) -->
+            <div class="col-span-3 bg-gray-800 p-4 rounded-lg">
+                <div id="threeDaysChart"></div>
+            </div>
+
+            <!-- Weekly Chart (bar chart) -->
+            <div class="col-span-3 bg-gray-800 p-4 rounded-lg">
+                <div id="weeklyChart"></div>
+            </div>
+
+            <!-- Monthly Chart (bar chart) -->
+            <div class="col-span-3 bg-gray-800 p-4 rounded-lg">
+                <div id="monthlyChart"></div>
+            </div>
+
+            <!-- Yearly Chart (bar chart) -->
+            <div class="col-span-3 bg-gray-800 p-4 rounded-lg">
+                <div id="yearlyChart"></div>
+            </div>
 
             <!-- Detailed Time Log -->
-            <div class="col-span-2 bg-gray-800 p-4 rounded-lg">
+            <div class="col-span-3 bg-gray-800 p-4 rounded-lg mt-6">
                 <h2 class="text-xl mb-4">Voci Temporali</h2>
-                <table id="timeEntriesTable" class="w-full">
-                    <thead>
-                        <tr>
-                            <th>Progetto</th>
-                            <th>Descrizione</th>
-                            <th>Durata</th>
-                            <th>Data</th>
-                        </tr>
-                    </thead>
-                    <tbody id="timeEntriesBody"></tbody>
-                </table>
+                <div class="overflow-x-auto">
+                    <table id="timeEntriesTable" class="w-full">
+                        <thead>
+                            <tr class="bg-gray-700">
+                                <th class="p-2 text-left">Progetto</th>
+                                <th class="p-2 text-left">Descrizione</th>
+                                <th class="p-2 text-left">Durata</th>
+                                <th class="p-2 text-left">Data</th>
+                            </tr>
+                        </thead>
+                        <tbody id="timeEntriesBody"></tbody>
+                    </table>
+                </div>
             </div>
         </div>
     </div>
